--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
     width: 100%;
     text-align: center;
     color:white;
-    background-color: #788F58;
+    background-color: #a0c52a;
 }
 
 #central-title{
@@ -35,17 +35,18 @@
 .left-title::after{
     content:"";
     height: 3px;
-    width: 5%;
+    width: 10%;
     top:50%;
-    left:120%;
+    left:116%;
     position: absolute;
-    background: gray;
+    background: rgb(196, 196, 196);
+    z-index: -1;
 }
 
 .left-title::before{
     content: "";
     position: absolute;
-    background: #788F58;
+    background: #a0c52a;
     width: 12px;
     height: 12px;
     top:50%;
@@ -57,17 +58,17 @@
 .right-title::before{
     content:"";
     height: 3px;
-    width: 5%;
+    width: 10%;
     top:50%;
     left:-25%;
     position: absolute;
-    background: gray;
+    background: rgb(196, 196, 196);
 }
 
 .right-title::after{
     content: "";
     position: absolute;
-    background: #788F58;
+    background: #a0c52a;
     width: 12px;
     height: 12px;
     top:50%;
@@ -91,13 +92,12 @@
     height: 800px;
     left:50%;
     top:10px;
-    background: gray;
+    background: rgb(196, 196, 196);
     z-index: -1;
 }
 
 
 .animated-progress {
-    width: 300px;
     height: 10px;
     border-radius: 5px;
     background-color: rgb(196, 196, 196);
@@ -117,7 +117,7 @@
     position: absolute;
     text-align: end;
     padding-right: 5px;
-    background-color: #788F58;
+    background-color: #a0c52a;
   }
 
 
@@ -149,4 +149,20 @@
     #right-section{
         text-align: center;
     }
+  }
+
+
+  @media(max-width:1199px){
+    .left-title::before{
+        right:-28%;
+    }
+
+    .right-title::after{
+        left:-27.35%;
+    }
+  }
+
+  .picture img{
+    width: 50%;
+    height: 50%;
   }
